--- a/src/components/Social.css
+++ b/src/components/Social.css
@@ -84,6 +84,9 @@
         margin-bottom: 0px;
         margin: 0 8px;
     }
+    .social-container .social-links a:nth-of-type(3) {
+        margin-right: 0;
+    }
 }
 
 @media only screen and (min-width: 992px) {
