--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,4 @@
 footer {
-    background-color: var(--primary);
     padding: 3rem 0;
 }
 footer .footer-container {
@@ -14,16 +13,33 @@ footer .footer-container {
 footer .footer-container .footer-column-title {
     display: block;
     margin-bottom: 20px;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 17px;
+    font-weight: 700;
     letter-spacing: 2px;
+    text-transform: uppercase;
+    color: var(--secondary);
+    position: relative;
+    width: fit-content;
 }
-footer .footer-container .links:nth-of-type(1) .footer-column-title {
-    color: var(--pink);
+/* footer .footer-container .footer-column-title:after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0%;
+    left: -0.3em;
+    right: -0.1em;
+    bottom: -2px;
+    transition: top 200ms cubic-bezier(0, 0.8, 0.18, 1);
 }
-footer .footer-container .links:nth-of-type(2) .footer-column-title {
-    color: var(--cyan);
+footer .footer-container .links:nth-of-type(1) .footer-column-title:after {
+    background-color: var(--olive);
 }
+footer .footer-container .links:nth-of-type(2) .footer-column-title:after {
+    background-color: var(--orange);
+}
+footer .footer-container .links:nth-of-type(3) .footer-column-title:after {
+    background-color: var(--red);
+} */
 
 footer .footer-container .links a {
     display: block;
@@ -43,44 +59,26 @@ footer .footer-container .links a:after {
     content: '';
     position: absolute;
     z-index: -1;
-    top: 75%;
+    top: 0%;
     left: -0.1em;
     right: -0.1em;
     bottom: -2px;
     transition: top 200ms cubic-bezier(0, 0.8, 0.18, 1);
-    background-color: var(--cream);
+    background-color: var(--background);
 }
-footer .footer-container .links a.link:nth-of-type(1):after {
-    background-color: var(--cyan);
+footer .footer-container .links a:hover,
+footer .footer-container .links a:focus {
+    color: var(--dark);
 }
-footer .footer-container .links a.link:nth-of-type(2):after {
-    background-color: var(--pink);
-}
-footer .footer-container .links a.link:nth-of-type(3):after {
-    background-color: var(--olive);
-}
-footer .footer-container .links a.link:nth-of-type(4):after {
-    background-color: var(--orange);
-}
-footer .footer-container .links a.link:nth-of-type(5):after {
-    background-color: var(--blue);
-}
-footer .footer-container .links a.link:nth-of-type(6):after {
-    background-color: var(--red);
-}
-
 footer .footer-container .links a:hover:after,
 footer .footer-container .links a:focus:after {
-    top: 0%;
-}
-footer .footer-container .links a.link:last-of-type {
-    margin-bottom: 40px;
+    background-color: var(--primary);
 }
 
 /* Copyright */
 footer .copyright {
-    text-align: center;
-    margin-top: 1rem;
+    text-align: right;
+    margin-top: 2rem;
 }
 footer .copyright span {
     display: block;
@@ -102,7 +100,7 @@ footer .copyright span a:after {
     right: -0.1em;
     bottom: -2px;
     transition: top 200ms cubic-bezier(0, 0.8, 0.18, 1);
-    background-color: var(--cream);
+    background-color: var(--pink);
 }
 footer .copyright span a:hover:after,
 footer .copyright span a:focus:after {
@@ -112,6 +110,9 @@ footer .copyright span a:focus:after {
 @media only screen and (min-width: 600px) {
     footer .footer-container {
         grid-template-columns: repeat(3, 1fr);
+    }
+    footer .copyright {
+        text-align: center;
     }
 }
 
