--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,11 @@
 :root {
-    --primary: #ffe01c;
+    /* --primary: #ffe01c; */
+    --primary: #ffda35;
     --secondary: #242f40;
     --background: #f6f7eb;
     --dark-text: #424249;
     --dark-background: #2a3d45;
+    --turquoise: #addfcf;
     --cyan: #73d2de;
     --blue: #5aa9da;
     --pink: #e78eba;
