--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -19,27 +19,8 @@ footer .footer-container .footer-column-title {
     text-transform: uppercase;
     color: var(--secondary);
     position: relative;
-    width: fit-content;
+    width: 100%;
 }
-/* footer .footer-container .footer-column-title:after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    top: 0%;
-    left: -0.3em;
-    right: -0.1em;
-    bottom: -2px;
-    transition: top 200ms cubic-bezier(0, 0.8, 0.18, 1);
-}
-footer .footer-container .links:nth-of-type(1) .footer-column-title:after {
-    background-color: var(--olive);
-}
-footer .footer-container .links:nth-of-type(2) .footer-column-title:after {
-    background-color: var(--orange);
-}
-footer .footer-container .links:nth-of-type(3) .footer-column-title:after {
-    background-color: var(--red);
-} */
 
 footer .footer-container .links a {
     display: block;
@@ -77,8 +58,8 @@ footer .footer-container .links a:focus:after {
 
 /* Copyright */
 footer .copyright {
-    text-align: right;
-    margin-top: 2rem;
+    text-align: center;
+    margin-top: 3rem;
 }
 footer .copyright span {
     display: block;
@@ -111,9 +92,9 @@ footer .copyright span a:focus:after {
     footer .footer-container {
         grid-template-columns: repeat(3, 1fr);
     }
-    footer .copyright {
+    /* footer .copyright {
         text-align: center;
-    }
+    } */
 }
 
 @media only screen and (min-width: 768px) {
