--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -69,6 +69,9 @@ header .nav-links a:nth-of-type(4):after {
 .static-header {
     position: static;
 }
+header .static-header h1 {
+    font-size: 40px;
+}
 
 .sticky-header {
     position: fixed;
@@ -77,7 +80,7 @@ header .nav-links a:nth-of-type(4):after {
     padding-bottom: 20px;
     z-index: 10000;
     width: 100%;
-    margin-top: -77px;
+    margin-top: -87px;
     animation: fadeIn 0.2s both ease-in;
 }
 .sticky-header .header-wrapper {
