--- a/src/components/Social.css
+++ b/src/components/Social.css
@@ -1,90 +1,68 @@
-.colour-block {
+.colour-block-social {
     background-color: var(--dark-background);
     width: 100%;
-    color: var(--white);
     padding: 2rem 0;
-}
-
-.social-container {
-    display: flex;
-    flex-direction: column;
-}
-.social-container div {
-    text-align: center;
-    padding: 1.5rem 0;
-}
-.social-container .newsletter h2 {
-    font-size: 23px;
-}
-.social-container .newsletter a {
-    text-decoration: none;
-    color: var(--white);
-}
-.social-container .newsletter a:hover,
-.social-container .newsletter a:focus {
-    color: var(--primary);
-    outline: none;
+    position: relative;
 }
 
 .social-container .social-links a {
-    padding: 3px 6px 4px 6px;
-    color: var(--dark-text);
-    font-weight: 500;
+    color: var(--background);
+    font-weight: 600;
     text-decoration: none;
     display: block;
+    font-size: 24px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: lowercase;
+    font-family: 'Acme', sans-serif;
 }
 .social-container div.social-links a:hover,
 .social-container div.social-links a:focus {
-    background-color: transparent;
-    color: var(--white);
+    color: var(--primary);
     outline: none;
 }
-.social-container .social-links a:nth-of-type(1) {
-    border: 2px solid var(--orange);
-    background-color: var(--orange);
-    margin-bottom: 15px;
-}
 .social-container .social-links a:nth-of-type(2) {
-    border: 2px solid var(--olive);
-    background-color: var(--olive);
-    margin-bottom: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-.social-container .social-links a:nth-of-type(3) {
-    border: 2px solid var(--cyan);
-    background-color: var(--cyan);
+
+.social-container .follow-us {
+    position: absolute;
+    top: -15px;
+    padding: 5px 10px 8px 10px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    background-color: var(--pink);
+    transform: rotate(-3deg);
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
 }
 
 @media only screen and (min-width: 600px) {
-    .social-container .newsletter h2 {
-        font-size: 30px;
-    }
 }
 
 @media only screen and (min-width: 768px) {
     .social-container {
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
     }
     .social-container div {
         text-align: center;
-        padding: 1.5rem 0 1rem 0;
     }
-    .social-container .newsletter h2 {
-        position: relative;
-        top: 6px;
-        font-size: 24px;
-    }
-    .social-container .social-links {
-        justify-content: end;
-        position: relative;
-        top: 4px;
-    }
-    .social-container .social-links a {
+    div.social-container div.social-links a {
         display: inline-block;
         margin-bottom: 0px;
-        margin: 0 8px;
+        margin: 0 40px;
+        font-size: 30px;
+        padding: 1.5rem 0;
     }
-    .social-container .social-links a:nth-of-type(3) {
+    div.social-container div.social-links a:nth-of-type(1) {
+        margin-left: 0;
+    }
+    .social-container .social-links a:nth-of-type(2) {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    div.social-container div.social-links a:nth-of-type(3) {
         margin-right: 0;
     }
 }
