--- a/src/components/Social.css
+++ b/src/components/Social.css
@@ -26,7 +26,7 @@
     margin-bottom: 20px;
 }
 
-.social-container .follow-us {
+.social-container .hashtag {
     position: absolute;
     top: -15px;
     padding: 5px 10px 8px 10px;
