--- a/src/components/Blogs.css
+++ b/src/components/Blogs.css
@@ -13,6 +13,7 @@
     text-shadow: 2px 2px 0px var(--secondary);
     margin-bottom: 30px;
     font-size: 26px;
+    text-transform: uppercase;
 }
 .blogs-read-more {
     display: inline-block;
