--- a/src/components/SingleProduct.css
+++ b/src/components/SingleProduct.css
@@ -13,6 +13,15 @@
     justify-content: center;
     align-items: center;
 }
+.single-product-container a:hover,
+.single-product-container a:focus {
+    outline: none;
+}
+/* .single-product-container a:hover img,
+.single-product-container a:focus img {
+    opacity: 0.8;
+} */
+
 .single-product-container a .product-info {
     position: absolute;
     display: none;
