--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -10,25 +10,26 @@
 
 .colour-block-signup form {
     display: flex;
+    flex-direction: column;
     padding: 3rem 0;
     justify-content: center;
     column-gap: 20px;
+    row-gap: 20px;
 }
 .colour-block-signup form .input-box {
     border: 1px solid white;
-    border-radius: 10px;
     padding: 0.75rem 0.75rem;
     width: 450px;
     font-size: 20px;
     font-family: 'Acme', sans-serif;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
+    width: 100%;
 }
 .colour-block-signup form .input-box:hover,
 .colour-block-signup form .input-box:focus {
     outline: 3px solid var(--primary);
 }
 .colour-block-signup form .submit-button {
-    border-radius: 10px;
     border: 2px solid var(--primary);
     padding: 0.75rem 1.5rem;
     background-color: var(--primary);
@@ -69,6 +70,28 @@
     }
     .signup-container .newsletter h2 {
         font-size: 38px;
+    }
+    .colour-block-signup form {
+        flex-direction: row;
+    }
+    .colour-block-signup form .input-box {
+        border: 1px solid white;
+        padding: 0.75rem 0.75rem;
+        width: 450px;
+        font-size: 20px;
+        font-family: 'Acme', sans-serif;
+        box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
+        width: 100%;
+    }
+    .colour-block-signup form .submit-button {
+        border: 2px solid var(--primary);
+        padding: 0.75rem 1.5rem;
+        background-color: var(--primary);
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: bolder;
+        font-family: 'Caveat', cursive;
+        box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
     }
 }
 
