--- a/src/components/App.css
+++ b/src/components/App.css
@@ -42,7 +42,7 @@ section {
     padding: 3rem 0;
 }
 section:first-of-type {
-    padding-top: 4rem;
+    padding-top: 40px;
 }
 section:last-of-type {
     padding-bottom: 4rem;
@@ -58,6 +58,12 @@ section:last-of-type {
 }
 
 @media only screen and (min-width: 600px) {
+    section:first-of-type {
+        padding-top: 4rem;
+    }
+    section:last-of-type {
+        padding-bottom: 4rem;
+    }
 }
 
 @media only screen and (min-width: 768px) {
