--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -24,6 +24,7 @@
     font-family: 'Acme', sans-serif;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
     width: 100%;
+    -webkit-appearance: none;
 }
 .colour-block-signup form .input-box:hover,
 .colour-block-signup form .input-box:focus {
@@ -38,6 +39,7 @@
     font-weight: bolder;
     font-family: 'Caveat', cursive;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
+    -webkit-appearance: none;
 }
 .colour-block-signup form .submit-button:hover,
 .colour-block-signup form .submit-button:focus {
