--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -25,6 +25,7 @@
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
     width: 100%;
     -webkit-appearance: none;
+    -webkit-border-radius: 0px;
 }
 .colour-block-signup form .input-box:hover,
 .colour-block-signup form .input-box:focus {
@@ -40,6 +41,7 @@
     font-family: 'Caveat', cursive;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
     -webkit-appearance: none;
+    -webkit-border-radius: 0px;
 }
 .colour-block-signup form .submit-button:hover,
 .colour-block-signup form .submit-button:focus {
