--- a/src/components/DoubleProduct.css
+++ b/src/components/DoubleProduct.css
@@ -20,22 +20,26 @@
 }
 .double-product-container a.single-product .product-info {
     position: absolute;
-    display: none;
 }
 .double-product-container a.single-product:hover .product-info,
 .double-product-container a.single-product:focus .product-info {
     display: block;
 }
 .double-product-container a.single-product .product-info span {
-    font-family: 'Acme', sans-serif;
-    font-size: 65px;
-    filter: drop-shadow(0.05em 0.05em var(--secondary));
+    font-size: 60px;
     font-weight: 700;
-    color: var(--primary);
+    color: transparent;
     position: relative;
     top: -10px;
-    text-transform: lowercase;
+    text-transform: uppercase;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: var(--white);
+    mix-blend-mode: screen;
 }
+.double-product-container a.single-product:hover .product-info span {
+    color: var(--white);
+}
+
 .double-product-container .single-product .img-container img {
     width: 100%;
     height: auto;
@@ -50,6 +54,8 @@
 @media only screen and (min-width: 768px) {
     .double-product-container a.single-product .product-info span {
         font-size: 75px;
+        font-weight: 800;
+        -webkit-text-stroke-width: 3px;
     }
 }
 
