--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -17,31 +17,31 @@
     row-gap: 20px;
 }
 .colour-block-signup form .input-box {
-    border: 1px solid white;
+    border: 1px solid var(--white);
     padding: 0.75rem 0.75rem;
     width: 450px;
     font-size: 20px;
     font-family: 'Acme', sans-serif;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
     width: 100%;
-    -webkit-appearance: none;
-    -webkit-border-radius: 0px;
+    appearance: none;
+    border-radius: 0px;
 }
 .colour-block-signup form .input-box:hover,
 .colour-block-signup form .input-box:focus {
     outline: 3px solid var(--primary);
 }
 .colour-block-signup form .submit-button {
-    border: 2px solid var(--primary);
+    border: 2px solid var(--olive);
     padding: 0.75rem 1.5rem;
-    background-color: var(--primary);
+    background-color: var(--olive);
     text-transform: uppercase;
     font-size: 20px;
     font-weight: bolder;
     font-family: 'Caveat', cursive;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
     -webkit-appearance: none;
-    -webkit-border-radius: 0px;
+    border-radius: 0px;
 }
 .colour-block-signup form .submit-button:hover,
 .colour-block-signup form .submit-button:focus {
@@ -53,12 +53,11 @@
 .weekly {
     position: absolute;
     top: -48px;
-    right: 17px;
     padding: 5px 10px 8px 10px;
     font-weight: 500;
     letter-spacing: 1px;
-    background-color: var(--cyan);
-    transform: rotate(3deg);
+    background-color: var(--orange);
+    transform: rotate(-3deg);
     box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
 }
 
@@ -88,14 +87,7 @@
         width: 100%;
     }
     .colour-block-signup form .submit-button {
-        border: 2px solid var(--primary);
         padding: 0.75rem 1.5rem;
-        background-color: var(--primary);
-        text-transform: uppercase;
-        font-size: 20px;
-        font-weight: bolder;
-        font-family: 'Caveat', cursive;
-        box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
     }
 }
 
