--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -14,6 +14,7 @@ footer .footer-container .final-column {
 }
 footer .footer-container .final-column span {
     color: var(--secondary);
+    display: block;
 }
 
 /* Copyright */
@@ -70,7 +71,7 @@ footer .copyright span a:focus:after {
 }
 
 @media only screen and (min-width: 1200px) {
-    footer .footer-container .final-column span {
-        float: right;
+    footer .footer-container .final-column {
+        text-align: right;
     }
 }
