--- a/src/styles/Guarantee.css
+++ b/src/styles/Guarantee.css
@@ -1,50 +1,63 @@
 .guarantee-container {
     display: flex;
     position: relative;
-    border: 1px solid red;
-    justify-content: center;
-    /* width: max-content; */
-    /* width: fit-content; */
     align-items: center;
-    /* justify-content: center; */
+    width: 260px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+.guarantee-container:last-of-type {
+    margin-bottom: 0;
 }
 
 /* Icon */
 .guarantee-container a {
-    font-size: 43px;
-    margin-right: 10px;
+    font-size: 50px;
+    margin-right: 15px;
+    position: relative;
 }
 
 /* Content */
-.guarantee-container .guarantee-content {
-}
 .guarantee-container .guarantee-content span {
     display: block;
+    color: var(--dark-text);
 }
 .guarantee-container .guarantee-content span.guarantee-title {
-    font-size: 16px;
+    font-size: 24px;
     margin-bottom: 3px;
     font-weight: 500;
+    /* font-family: 'Josefin Sans', sans-serif; */
 }
 .guarantee-container .guarantee-content span.guarantee-text {
-    font-size: 13px;
-    opacity: 0.5;
+    font-size: 14px;
+    opacity: 0.6;
 }
 
 @media only screen and (min-width: 600px) {
 }
 @media only screen and (min-width: 768px) {
+    .guarantee-container:last-of-type {
+        margin-bottom: 40px !important;
+    }
 }
 @media only screen and (min-width: 992px) {
+    .guarantee-container {
+        width: unset;
+    }
     .guarantee-container a {
-        font-size: 43px;
-        margin-right: 20px;
+        font-size: 46px;
+        margin-right: 18px;
+        position: relative;
+        top: 2px;
     }
     .guarantee-container .guarantee-content span.guarantee-title {
         font-size: 24px;
     }
     .guarantee-container .guarantee-content span.guarantee-text {
         font-size: 14px;
+    }
+    .guarantee-container:last-of-type {
+        margin-bottom: 40px !important;
     }
 }
 @media only screen and (min-width: 1200px) {
