--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -29,10 +29,11 @@ header .nav-links {
 }
 header .nav-links a {
     text-decoration: none;
-    color: var(--grey);
+    color: var(--secondary);
     margin: 0 10px;
     position: relative;
     z-index: 100;
+    font-weight: 400;
 }
 header .nav-links a:hover,
 header .nav-links a:focus {
