--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,103 +1,3 @@
-/* .colour-block-signup {
-    background-color: var(--dark-background);
-    width: 100%;
-    padding: 2rem 0;
-}
-
-.colour-block-signup .wrapper {
-    position: relative;
-}
-
-.colour-block-signup form {
-    display: flex;
-    flex-direction: column;
-    padding: 3rem 0;
-    justify-content: center;
-    column-gap: 20px;
-    row-gap: 20px;
-}
-.colour-block-signup form .input-box {
-    border: 1px solid var(--white);
-    padding: 0.75rem 0.75rem;
-    width: 450px;
-    font-size: 20px;
-    font-family: 'Acme', sans-serif;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
-    width: 100%;
-    appearance: none;
-    border-radius: 0px;
-}
-.colour-block-signup form .input-box:hover,
-.colour-block-signup form .input-box:focus {
-    outline: 3px solid var(--primary);
-}
-.colour-block-signup form .submit-button {
-    border: 2px solid var(--olive);
-    padding: 0.75rem 1.5rem;
-    background-color: var(--olive);
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: bolder;
-    font-family: 'Caveat', cursive;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
-    -webkit-appearance: none;
-    border-radius: 0px;
-}
-.colour-block-signup form .submit-button:hover,
-.colour-block-signup form .submit-button:focus {
-    background-color: transparent;
-    color: white;
-    cursor: pointer;
-}
-
-.weekly {
-    position: absolute;
-    top: -48px;
-    padding: 5px 10px 8px 10px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    background-color: var(--orange);
-    transform: rotate(-3deg);
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
-}
-
-@media only screen and (min-width: 600px) {
-    .signup-container .newsletter h2 {
-        font-size: 32px;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-    .signup-container div {
-        text-align: center;
-    }
-    .signup-container .newsletter h2 {
-        font-size: 38px;
-    }
-    .colour-block-signup form {
-        flex-direction: row;
-    }
-    .colour-block-signup form .input-box {
-        border: 1px solid white;
-        padding: 0.75rem 0.75rem;
-        width: 450px;
-        font-size: 20px;
-        font-family: 'Acme', sans-serif;
-        box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 15px;
-        width: 100%;
-    }
-    .colour-block-signup form .submit-button {
-        padding: 0.75rem 1.5rem;
-    }
-}
-
-@media only screen and (min-width: 992px) {
-}
-
-@media only screen and (min-width: 1200px) {
-} */
-
-/* New */
 .signup-container {
     text-align: center;
     color: var(--purple);
@@ -105,7 +5,7 @@
 .signup-container .large-text {
     text-transform: uppercase;
     font-weight: 900;
-    font-size: 38px;
+    font-size: 36px;
     color: var(--primary);
     text-shadow: 2px 2px 0px var(--secondary);
     -webkit-text-stroke: 1px;
@@ -157,11 +57,6 @@
 .newsletter form .input-box:hover,
 .newsletter form .input-box:focus {
     outline: none;
-    box-shadow: 0px 0px 5px var(--cyan);
-}
-.newsletter form .input-box:hover + .submit-button,
-.newsletter form .input-box:focus + .submit-button {
-    box-shadow: 0px 0px 6px var(--cyan);
 }
 
 .newsletter form .submit-button {
@@ -204,5 +99,8 @@
         -webkit-text-fill-color: var(--orange);
         -webkit-text-stroke: 2px;
         -webkit-text-stroke-color: var(--secondary);
+    }
+    .newsletter form {
+        margin: 50px auto 0 auto;
     }
 }
