--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -19,7 +19,7 @@
     width: 260px;
     text-transform: uppercase;
     font-size: 35px;
-    top: 50%;
+    top: 46%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     text-align: justify;
@@ -30,7 +30,7 @@
     object-position: 20%;
 }
 .banner-container .banner-slide-1 .banner-text {
-    color: var(--cyan);
+    color: var(--primary);
 }
 
 /* Banner 2 */
@@ -40,11 +40,17 @@
 
 /* Banner 3 */
 .banner-container .banner-slide-3 .banner-text {
-    color: var(--pink);
+    color: var(--primary);
 }
 
 .banner-container .swiper-pagination span.swiper-pagination-bullet {
     background-color: var(--primary);
+}
+.banner-container .swiper-pagination span.swiper-pagination-bullet {
+    background-color: var(--primary);
+}
+.banner-container .swiper-pagination {
+    bottom: 25px !important;
 }
 
 @media only screen and (min-width: 600px) {
@@ -66,8 +72,11 @@
 }
 
 @media only screen and (min-width: 992px) {
+    .banner-container {
+        height: 100vh;
+    }
     .banner-container .banner-slide .banner-img {
-        height: 750px;
+        height: calc(100vh - 110px);
     }
     .banner-container .banner-slide .banner-text {
         width: unset;
